--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
-<head>input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
+<head>
 <style>
 body {background-color:red;}
 h1   {color: blue;}
@@ -25,20 +15,22 @@ p1   {color:black}
 <!DOCTYPE html>
 <html>
 <head>
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1".container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-</style>
-</head>
-<body>
+  <meta name="viewport" content="width=device-width, initial-scale=1"
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+                                                                     }
+
 input[type=submit] {
   background-color: #4CAF50;
   color: white;
@@ -51,31 +43,26 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: #45a049;
 }
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+</style>
+</head>
+<body>
+
 <h2>Inquire Form</h2>
 
 <div class="container">
   <form action="/action_page.php">
-    <label for="fname">Name</label> <select id="country" name="country">
-      <option value="India">India</option>
-      <option value="England">England</option>
-      <option value="usa">United States</option>
-      <option value="Australia">Australia</option>
-      <option value="Pakistan">Pakistan</option>
-      <option value="Jamaica">Jamaica</option>
-
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-    
-
+    <label for="fname">Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Email</label>
+  <label for="lname">Email</label>
     <input type="text" id="lname" name="lastname" placeholder="Your mail-id..">
 
     <label for="country">Country</label>
-     <select id="country" name="country">
+    <select id="country" name="country">
       <option value="India">India</option>
       <option value="England">England</option>
       <option value="usa">United States</option>
@@ -87,10 +74,10 @@ input[type=submit]:hover {
 
     <label for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-<input type="submit" value="Submit">
+
+    <input type="submit" value="Submit">
   </form>
 </div>
-
 </body>
 </html>
-    
+
